--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "frdim"
 version = "0.1.0"
 edition = "2021"
 
+[dependencies]
+rand = "0.8.4"
+
 [dependencies.sdl2]
 version = "0.35.2"
 default-features = false
